# df-metadata

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
api_data/: business_glossary.json  data_sources.json  dataset_asset.json  dataset_dictionary.json  dataset_dq_model_parms.json  dataset_dq_rules.json  dataset_dr_rules.json  dataset_schemas.json  datasets.json  distribution_tasks.json  dq_rules.json  dr_expectations.json  ingestion_maps.json  integration_tasks.json  schedules.json  services.json  system_glossary.json  workflows.json
metadata/: dataset.py  distribution_task.py  dq_expectation.py  dq_rule.py  dr_expectation.py  holiday.py  ingestion_task.py  ingestion_workflow.py  schedule.py  service.py  workflow.py
metadata/api_data/: dataset_schemas.json  datasets.json  distribution_workflows.json  dq_expectations.json  dq_rules.json  dr_expectations.json  dr_rules.json  holidays.json  ingestion_tasks.json  ingestion_workflows.json  schedules.json  services.json
metadata/data_not_used/: acct_positions_20241130.csv  acct_positions_20241225.csv  acct_positions_20241226.csv  assets.csv  customer.csv
metadata/tests/: test_dataset.py
scripts/: metadata
src/metadata/: business_glossary.py  data_source.py  dataset.py  dataset_asset.py  dataset_dictionary.py  dataset_dq_model_parms.py  dataset_dq_rule.py  dataset_dr_rule.py  dataset_schema.py  distribution_task.py  dq_expectation.py  dq_rule.py  dr_expectation.py  dr_rule.py  holiday.py  ingestion_task.py  integration_task.py  schedule.py  service.py  system_glossary.py  workflow.py
tests/: test_dataset.py
