[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata"
version = "0.0.1"
authors = [
  { name="Rajakumaran Arivumani", email="author@example.com" },
]
description = "Data quality app package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
dependencies = [
  # app specific 
  "python-dateutil", 
  "requests", 
  # my packages
  #"utils", 
  # my packages
  #"utils @ git+https://github.com/dexplorer/utils",
]
keywords = ["data", "metadata", "etl", "elt", "framework", "governance"]

[project.optional-dependencies]
my-packages-local = [
  # my packages (installed locally)
  "utils",
]
my-packages-container = [
  # my packages (source in container)
  "utils @ file:///packages/utils",
]
test = [
  # standard dev tools
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "ipython",
  "isort", 
]
all-dev = [
  "metadata[my-packages-local, test]"
  ]
all = [
  "metadata[my-packages-container]"
  ]

[project.scripts]

[project.urls]
Homepage = "https://profile.rajakumaran.in"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dexplorer/df-metadata.git"
Issues = "https://github.com/dexplorer/df-metadata/issues"
Changelog = "https://github.com/dexplorer/df-metadata/blob/master/CHANGELOG.md"

[tool.black]
#line-length = 79

[tool.isort]
profile = "black"
#line_length = 79
known_third_party = ["pyspark"]  
known_first_party = ["utils"]  
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
src_paths = ["src", "utils"]  
